# VecPlus

./: .gitignore  CMakeLists.txt  README.md
cmake/: VecPlusConfig.cmake.in
include/VecPlus/: Vec2.h  Vec2Base.h  Vec2Base.inl  Vec2Decimal.h  Vec2Decimal.inl  Vec2Int.h  Vec2Int.inl  Vec3.h  Vec3Base.h  Vec3Base.inl  Vec3Decimal.h  Vec3Decimal.inl  Vec3Int.h  Vec3Int.inl
src/VecPlus/: Vec2Base.inl  Vec2Decimal.cpp  Vec2Int.cpp  Vec3Base.inl  Vec3Decimal.cpp  Vec3Int.cpp
test/: CMakeLists.txt  Vec2Int_Test.cpp  Vec2d_Test.cpp  Vec2f_Test.cpp  Vec2i_Test.cpp  Vec3d_Test.cpp  Vec3f_Test.cpp  Vec3i_Test.cpp  pch.h
